--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ h1 {
     font-size: 5em;
 }
 
+p {
+    grid-column: 1/3;
+    font-size: 2em;
+    text-align: center;
+}
+
 #survey-form {
     grid-column: 2 / 3;
     display: grid;
